Settings: Users: Make isCurrentUserOwner async

BUG=724421

Review-Url: https://codereview.chromium.org/2902253004
Cr-Commit-Position: refs/heads/master@{#475584}

Former-commit-id: 08449a9d4ce38aeb0c5e0519e1f09fc1de1a42a0